--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datalist-field": "^20.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-lottie": "^1.2.3",
